--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -1,6 +1,7 @@
 :root {
   --color-gray: #e7e7e7;
   --color-primary: #7486b8;
+  --color-secondary: #00873c;
   --padding-md: 33px;
   --sidebar-width: 275px;
   --border-radius: 3px;
@@ -13,6 +14,7 @@ body,
   height: 100vh;
   width: 100%;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 input {
