re-arranged directory

--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -1,9 +1,15 @@
 .container {
   display: flex;
   flex-direction: column;
+  background-color: var(--color-body-bg);
+  color: white;
 }
 
 .contents {
   padding: var(--padding-md);
   overflow: auto;
+}
+
+.header {
+  background-color: var(--color-header-bg);
 }
