--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -1,6 +1,5 @@
 .navbar {
 	--selected-color: var(--color-secondary);
-	background-color: #000;
 	color: #fff;
 	padding: var(--padding-md);
 
@@ -14,6 +13,7 @@
 			font-weight: 500;
 			padding: 10px;
 			border-radius: var(--border-radius);
+			white-space: nowrap;
 
 			&:hover {
 				background-color: #454545;
