--- a/frontend/ToWatchItem/ToWatchItem.less
+++ b/frontend/ToWatchItem/ToWatchItem.less
@@ -1,19 +1,3 @@
-.to-watch-item {
-  border: 1px solid #c7c7c7;
-  border-radius: 3px;
-  padding: var(--padding-md);
-  flex: 1;
-}
-
-.to-watch-item h1 {
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.to-watch-item p {
-  margin: 0;
-}
-
 .to-watch-item-body {
   display: flex;
   flex-direction: column;
@@ -36,7 +20,7 @@
 
 .ratings-list {
   margin: 0;
-  border: 1px solid var(--color-gray);
+  border: 1px solid #e7e7e736;
   padding: 10px;
   display: flex;
   flex-direction: column;
