--- a/frontend/src/components/Shared/Box/Modal/Modal.less
+++ b/frontend/src/components/Shared/Box/Modal/Modal.less
@@ -1,5 +1,7 @@
 .modal-overlay {
   position: absolute;
+  top: 0;
+  left: 0;
   background-color: #0000004d;
   width: 100%;
   height: 100%;
@@ -11,7 +13,18 @@
 .modal {
   position: relative;
   background-color: white;
+  color: black;
   width: fit-content;
   padding: var(--padding-md);
   border-radius: 8px;
+}
+
+.modal-header {
+  button {
+    background-color: var(--color-gray);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+  }
 }
