--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -1,10 +1,26 @@
 :root {
+  // Colors
   --color-gray: #e7e7e7;
-  --color-primary: #7486b8;
+  --color-primary: #29507a;
   --color-secondary: #00873c;
+  --color-header-bg: #000;
+  --color-body-bg: #123038;
+
+  // Spacing
   --padding-md: 33px;
-  --sidebar-width: 275px;
   --border-radius: 3px;
+
+  // Sizing
+  --sidebar-width: 275px;
+
+  // Media Card
+  --media-card-width: 225px;
+  --media-card-height: 400px;
+  --media-card-border-radius: 5px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 html,
@@ -14,15 +30,6 @@ body,
   height: 100vh;
   width: 100%;
   overflow: hidden;
-  box-sizing: border-box;
-}
-
-input {
-  padding: 10px;
-  background-color: #f0f0f0;
-  border: none;
-  border-radius: var(--border-radius);
-  min-width: 275px;
 }
 
 body {
@@ -38,5 +45,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
-
