--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -1,7 +1,7 @@
 .navbar {
 	--selected-color: var(--color-secondary);
 	color: #fff;
-	padding: var(--padding-md);
+	padding: 10px;
 
 	.navbar-links {
 		display: flex;
