--- a/frontend/src/components/Shared/Tabs/Tabs.less
+++ b/frontend/src/components/Shared/Tabs/Tabs.less
@@ -3,13 +3,15 @@
 	width: 80px;
 	padding: 6px;
 	background-color: transparent;
-	border: 1px solid var(--color-primary);
+	border: 1px solid #818181;
 	border-radius: var(--border-radius);
-	color: var(--color-primary);
+	color: var(--color-gray);
 	cursor: pointer;
+	text-transform: capitalize;
 
 	&.active {
 		background-color: var(--color-primary);
+		border-color: var(--color-primary);
 		color: white;
 	}
 }
