adds sort param

--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -25,6 +25,9 @@
 		.selected {
 			outline: 1px solid var(--selected-color);
 			color: var(--selected-color);
+			&:hover {
+				background-color: transparent;
+			}
 		}
 	}
 }
