--- a/frontend/src/components/Search/Search.less
+++ b/frontend/src/components/Search/Search.less
@@ -17,13 +17,15 @@
       margin-right: auto;
     }
   }
+
+
 }
 
-
-.search-results {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
+.search-input {
+  .icon-button {
+    position: absolute;
+    right: 0;
+  }
 }
 
 .search-result-item {
