--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -1,6 +1,7 @@
 :root {
   // Colors
   --color-gray: #e7e7e7;
+  --color-gray-1: #c3c3c3;
   --color-primary: #29507a;
   --color-secondary: #00873c;
   --color-header-bg: #000;
@@ -9,6 +10,7 @@
   // Spacing
   --padding-md: 33px;
   --border-radius: 3px;
+  --input-padding: 6px;
 
   // Sizing
   --sidebar-width: 275px;
@@ -16,7 +18,7 @@
   // Media Card
   --media-card-width: 225px;
   --media-card-height: 400px;
-  --media-card-border-radius: 5px;
+  --media-card-border-radius: 10px;
 }
 
 * {
@@ -44,4 +46,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p {
+  margin: 0
+}
+
+input,
+select {
+  outline: none;
 }
