--- a/frontend/src/components/ActionBar/ActionBar.less
+++ b/frontend/src/components/ActionBar/ActionBar.less
@@ -1,5 +1,20 @@
 .actionbar-search {
+	padding: var(--input-padding);
 	padding-left: 15px;
 	border: none;
 	border-radius: var(--border-radius);
+}
+
+.sort-dropdown-label {
+	white-space: nowrap;
+	text-transform: uppercase;
+	font-size: 11px;
+}
+
+.sort-icon {
+
+	&:hover {
+		cursor: pointer;
+		opacity: 0.6;
+	}
 }
