--- a/frontend/src/components/Shared/Box/Modal/Modal.less
+++ b/frontend/src/components/Shared/Box/Modal/Modal.less
@@ -2,12 +2,13 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #0000004d;
+  background-color: #00000045;
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  backdrop-filter: blur(2px);
 }
 
 .modal {
@@ -20,11 +21,15 @@
 }
 
 .modal-header {
+  .modal-header-title {
+    font-size: 25px;
+    margin-bottom: 35px;
+    color: black;
+  }
+
   button {
-    background-color: var(--color-gray);
     position: absolute;
     top: 10px;
     right: 10px;
-
   }
 }
