Adds update functionality

--- a/frontend/src/components/MediaCard/MediaCard.less
+++ b/frontend/src/components/MediaCard/MediaCard.less
@@ -29,7 +29,7 @@
 
 	.media-card-img {
 		flex: 1;
-		background: url('../../images/test.png');
+		background: url('../../images/metacritic.png');
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
