--- a/frontend/src/components/MediaList/MediaList.less
+++ b/frontend/src/components/MediaList/MediaList.less
@@ -1,5 +1,5 @@
 .media-card-list {
-	padding-top: var(--padding-md);
+	padding: var(--padding-md) 0;
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
