--- a/frontend/src/components/Shared/Dropdown/Dropdown.less
+++ b/frontend/src/components/Shared/Dropdown/Dropdown.less
@@ -1,4 +1,14 @@
 .dropdown-select {
 	padding: var(--input-padding);
 	border-radius: var(--border-radius);
+	appearance: none;
+	width: 136px;
+}
+
+.dropdown-select-icon {
+	position: absolute;
+	right: 9px;
+	z-index: 100000;
+	color: #2000ff;
+	top: 8px;
 }
