--- a/frontend/src/components/Shared/Box/Modal/Modal.less
+++ b/frontend/src/components/Shared/Box/Modal/Modal.less
@@ -18,6 +18,17 @@
   width: fit-content;
   padding: var(--padding-md);
   border-radius: 8px;
+  min-width: 350px;
+  max-width: 90%;
+
+  &.dark {
+    .modal-header-title {
+      color: white;
+    }
+
+    color: white;
+    background-color: #000000c4;
+  }
 }
 
 .modal-header {
