--- a/frontend/src/components/Shared/Button/Button.less
+++ b/frontend/src/components/Shared/Button/Button.less
@@ -13,7 +13,7 @@
   gap: 7px;
 
   &:hover {
-    /* TODO: [cam] how to darken colors programttically>? */
+    /* TODO: [cam] how to darken colors programatically? */
     opacity: 0.8;
     cursor: pointer;
   }
