--- a/frontend/src/components/Shared/Box/Modal/Modal.less
+++ b/frontend/src/components/Shared/Box/Modal/Modal.less
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(2px);
+  z-index: 2;
 }
 
 .modal {
@@ -33,8 +34,9 @@
 
 .modal-header {
   .modal-header-title {
+    margin: 0;
+    flex: 1;
     font-size: 25px;
-    margin-bottom: 35px;
     color: black;
   }
 
