--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -4,6 +4,7 @@
   --color-gray-1: #c3c3c3;
   --color-primary: #29507a;
   --color-secondary: #00873c;
+  --color-action: #005fff;
   --color-header-bg: #000;
   --color-body-bg: #123038;
 
