Before button changes

--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -12,4 +12,5 @@
 
 .header {
   background-color: var(--color-header-bg);
+  background-image: linear-gradient(93deg, rgb(17 17 17), var(--color-input-bg));
 }
