--- a/frontend/src/components/MediaList/MediaList.less
+++ b/frontend/src/components/MediaList/MediaList.less
@@ -1,6 +1,7 @@
 .media-card-list {
-	padding: var(--padding-md) 0;
-	display: flex;
-	flex-wrap: wrap;
+	padding-bottom: var(--padding-md);
+	display: grid;
 	gap: 30px;
+	grid-template-columns: repeat(auto-fill, var(--media-card-width));
+
 }
