--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -21,9 +21,25 @@
 			}
 		}
 
+		.to-watch {
+			outline: 1px solid var(--color-to-watch);
 
-		.selected {
-			outline: 1px solid var(--selected-color);
+			&:hover {
+				background-color: transparent;
+			}
+		}
+
+		.watched {
+			outline: 1px solid var(--color-watched);
+
+			&:hover {
+				background-color: transparent;
+			}
+		}
+
+		.search {
+			outline: 1px solid white;
+
 			&:hover {
 				background-color: transparent;
 			}
