--- a/frontend/src/components/Shared/Modal/Modal.less
+++ b/frontend/src/components/Shared/Modal/Modal.less
@@ -14,8 +14,8 @@
 
 .modal {
   position: relative;
-  background-color: white;
-  color: black;
+  background-color: var(--color-modal-bg);
+  color: white;
   width: fit-content;
   padding: var(--padding-md);
   border-radius: 8px;
@@ -34,11 +34,12 @@
 
 .modal-header {
   max-width: 370px;
+
   .modal-header-title {
     margin: 0;
     flex: 1;
     font-size: 25px;
-    color: black;
+    color: white;
   }
 
   button {
