--- a/frontend/src/components/Search/Search.less
+++ b/frontend/src/components/Search/Search.less
@@ -1,30 +1,26 @@
-.search {
+.search-input {
   input {
-    padding: 10px;
-    background-color: #f0f0f0;
+    padding: var(--input-padding) 10px;
+    background-color: var(--color-input-bg);
+    color: white;
     border: none;
     border-radius: var(--border-radius);
     min-width: 275px;
-  }
+    height: 29px;
 
-  header {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-
-    h1 {
-
-      margin-right: auto;
+    &::placeholder {
+      color: var(--color-input-fg);
     }
   }
 
-
-}
-
-.search-input {
   .icon-button {
     position: absolute;
-    right: 0;
+    right: 5px;
+  }
+
+  .action-bar-search-icon {
+    position: absolute;
+    right: 10px;
   }
 }
 
