--- a/frontend/src/components/Shared/Tabs/Tabs.less
+++ b/frontend/src/components/Shared/Tabs/Tabs.less
@@ -2,10 +2,10 @@
 	min-width: fit-content;
 	width: 80px;
 	padding: var(--input-padding);
-	background-color: transparent;
-	border: 1px solid #818181;
+	background-color: var(--color-input-bg);
+	border: none; 
 	border-radius: var(--border-radius);
-	color: var(--color-gray);
+	color: var(--color-input-fg);
 	cursor: pointer;
 
 	&.active {
