adds support for dates for multiple seasons

--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -11,6 +11,7 @@
   --color-modal-bg: #163b44;
   --color-watched: #7500dd;
   --color-to-watch: #00873c;
+  --color-accent: #fac000;
 
   // Spacing
   --padding-md: 30px;
