converts all svgs to respective icons

--- a/frontend/src/components/Search/Search.less
+++ b/frontend/src/components/Search/Search.less
@@ -13,10 +13,12 @@
     }
   }
 
-  .icon-button {
+  .search-input-icon {
+    width: 15px;
     position: absolute;
-    right: 5px;
+    right: 7px;
   }
+
 
   .action-bar-search-icon {
     position: absolute;
