--- a/frontend/src/components/Shared/Button/Button.less
+++ b/frontend/src/components/Shared/Button/Button.less
@@ -30,12 +30,16 @@
   background-color: transparent;
   border-radius: 50%;
   border: none;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
+  padding: 0;
+
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
+
+
 
   &:hover {
     background-color: #c5c5c521;
@@ -66,4 +70,8 @@
 
 
   }
+}
+
+.button-icon {
+  width: 17px;
 }
