Adds react-select for tag selector

--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -14,6 +14,7 @@
 			padding: 10px;
 			border-radius: var(--border-radius);
 			white-space: nowrap;
+			border: 1px solid transparent;
 
 			&:hover {
 				background-color: #454545;
@@ -22,7 +23,7 @@
 		}
 
 		.to-watch {
-			outline: 1px solid var(--color-to-watch);
+			border: 1px solid var(--color-to-watch);
 
 			&:hover {
 				background-color: transparent;
@@ -30,7 +31,7 @@
 		}
 
 		.watched {
-			outline: 1px solid var(--color-watched);
+			border: 1px solid var(--color-watched);
 
 			&:hover {
 				background-color: transparent;
@@ -38,7 +39,7 @@
 		}
 
 		.search {
-			outline: 1px solid white;
+			border: 1px solid white;
 
 			&:hover {
 				background-color: transparent;
