--- a/frontend/src/components/Shared/Button/Button.less
+++ b/frontend/src/components/Shared/Button/Button.less
@@ -39,7 +39,10 @@
   justify-content: center;
   cursor: pointer;
 
-
+  &.search-footer svg {
+    width: 11px;
+    stroke-width: 4px;
+  }
 
   &:hover {
     background-color: #c5c5c521;
