--- a/frontend/src/components/Shared/Tabs/Tabs.less
+++ b/frontend/src/components/Shared/Tabs/Tabs.less
@@ -3,7 +3,7 @@
 	width: 80px;
 	padding: var(--input-padding);
 	background-color: var(--color-input-bg);
-	border: none; 
+	border: 1px solid transparent; 
 	border-radius: var(--border-radius);
 	color: var(--color-input-fg);
 	cursor: pointer;
@@ -12,6 +12,6 @@
 		background-color: var(--color-primary);
 		border-color: var(--color-primary);
 		color: white;
-		outline: 1px solid #089dff;
+		border: 1px solid #089dff;
 	}
 }
