--- a/frontend/src/components/Shared/Button/Button.less
+++ b/frontend/src/components/Shared/Button/Button.less
@@ -75,6 +75,29 @@
   }
 }
 
+.button-with-icon {
+  svg {
+    width: 15px;
+    height: 15px;
+  }
+}
+
 .button-icon {
   width: 17px;
+}
+
+.clear-filters-button {
+  background-color: transparent;
+  border: 1px solid #989898;
+  padding: 3px 5px;
+  font-size: 10px;
+  font-weight: 400;
+  color: white;
+  border-radius: var(--border-radius);
+  white-space: nowrap;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
 }
