--- a/frontend/src/components/Shared/Notification/Notification.less
+++ b/frontend/src/components/Shared/Notification/Notification.less
@@ -10,4 +10,9 @@
   box-shadow: 2px 5px 3px #0505051c;
   font-weight: 500;
   z-index: 1000;
+
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
