--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -22,9 +22,12 @@
   --sidebar-width: 275px;
 
   // Media Card
-  --media-card-width: 225px;
+  --media-card-width: 205px;
   --media-card-height: 400px;
   --media-card-border-radius: 10px;
+
+  // Mobile 
+  --mobile-padding: 10px;
 }
 
 * {
