--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -14,3 +14,10 @@
   background-color: var(--color-header-bg);
   background-image: linear-gradient(93deg, rgb(17 17 17), var(--color-input-bg));
 }
+
+@media (max-width: 375px) {
+  .contents {
+    padding: var(--mobile-padding);
+    padding-top: 0;
+  } 
+}
