--- a/frontend/src/components/Navbar/Navbar.less
+++ b/frontend/src/components/Navbar/Navbar.less
@@ -2,6 +2,7 @@
 	--selected-color: var(--color-secondary);
 	color: #fff;
 	padding: 10px;
+	width: 100%;
 
 	.navbar-links {
 		display: flex;
@@ -44,6 +45,14 @@
 			&:hover {
 				background-color: transparent;
 			}
+		}
+	}
+}
+
+@media (max-width: 375px) {
+	.navbar-links {
+		a:nth-child(3) {
+			margin-left: auto;
 		}
 	}
 }
