--- a/frontend/src/components/Search/Search.less
+++ b/frontend/src/components/Search/Search.less
@@ -5,12 +5,17 @@
     color: white;
     border: none;
     border-radius: var(--border-radius);
-    min-width: 275px;
+    min-width: 235px;
     height: 29px;
 
     &::placeholder {
       color: var(--color-input-fg);
     }
+  }
+
+  .icon-button {
+    position: absolute;
+    right: 3px;
   }
 
   .search-input-icon {
@@ -33,4 +38,20 @@
   border-radius: 10px;
   color: white;
   background-color: #000000e3;
+}
+
+.search-item-footer {
+  font-size: 12;
+}
+
+
+@media (max-width: 375px) {
+  .search-item-footer {
+    font-size: 12;
+
+    .icon-button {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
