--- a/frontend/src/components/Shared/Dropdown/Dropdown.less
+++ b/frontend/src/components/Shared/Dropdown/Dropdown.less
@@ -35,6 +35,7 @@
 		width: var(--width);
 		font-size: 14px;
 		padding: 8px 0px;
+		z-index: 2;
 
 		li {
 			white-space: nowrap;
@@ -52,4 +53,83 @@
 			}
 		}
 	}
+}
+
+.multi-select {
+	--width: 100%;
+	width: var(--width);
+	position: relative;
+
+	.dropdown-button {
+		min-height: 35px;
+		height: fit-content;
+		background-color: var(--color-input-bg);
+		color: white;
+		padding-left: 10px;
+		width: var(--width);
+		cursor: pointer;
+		border: none;
+		border-radius: var(--border-radius);
+
+		svg:hover {
+			opacity: 0.6;
+		}
+	}
+
+	.dropdown-list {
+		border-radius: var(--border-radius);
+		background-color: var(--color-input-bg);
+		color: white;
+		list-style: none;
+		margin: 0;
+		position: absolute;
+		z-index: 1;
+		margin-top: 3px;
+		box-shadow: 2px 5px 3px #0505051c;
+		width: var(--width);
+		font-size: 14px;
+		padding: 8px 0px;
+
+		li {
+			white-space: nowrap;
+			padding: 10px;
+			padding: 5px 11px;
+
+			&.active {
+				color: var(--color-accent);
+				font-weight: 600;
+			}
+
+			&:hover {
+				background-color: #00000021;
+				cursor: pointer;
+			}
+		}
+
+		.no-options {
+			font-size: 12px;
+			margin-left: 15px;
+		}
+	}
+
+	.selected-option {
+		border: 1px solid gray;
+		padding: 5px 6px;
+		border-radius: var(--border-radius);
+		white-space: nowrap;
+		font-size: 10px;
+
+		svg:hover {
+			opacity: 0.6;
+		}
+
+	}
+
+}
+
+.input-divider {
+	background-color: #959595;
+	width: 1px;
+	height: 20px;
+	margin: 0 10px;
 }
