--- a/frontend/src/components/Shared/Modal/Modal.less
+++ b/frontend/src/components/Shared/Modal/Modal.less
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
   z-index: 2;
 }
 
@@ -21,6 +22,8 @@
   border-radius: 8px;
   min-width: 350px;
   max-width: 90%;
+  max-height: 90%;
+  overflow: auto;
 
   &.dark {
     .modal-header-title {
