--- a/frontend/src/components/Shared/Rating/Rating.less
+++ b/frontend/src/components/Shared/Rating/Rating.less
@@ -9,7 +9,7 @@
 	border-radius: var(--border-radius);
 }
 
-.rating {
+.rating-list-item {
 	display: flex;
 	align-items: center;
 	gap: 5px;
@@ -23,5 +23,11 @@
 		justify-content: space-between;
 		width: 70px;
 
+	}
+}
+
+@media (max-width: 375px) {
+	.ratings-list {
+		width: fit-content;
 	}
 }
