--- a/frontend/src/components/MediaCard/MediaCard.less
+++ b/frontend/src/components/MediaCard/MediaCard.less
@@ -31,6 +31,7 @@
 		background-size: cover;
 		background-position: center;
 		border-radius: calc(var(--media-card-border-radius) - 1px);
+		min-height: 275px;
 	}
 
 	.media-card-footer {
