--- a/frontend/src/components/Search/Search.less
+++ b/frontend/src/components/Search/Search.less
@@ -1,3 +1,7 @@
+.search-container {
+  padding: 0 30px;
+}
+
 .search-input {
   input {
     padding: var(--input-padding) 10px;
@@ -46,6 +50,10 @@
 
 
 @media (max-width: 1115px) {
+  .search-container {
+    padding: 0 10px;
+  }
+
   .search-item-footer {
     font-size: 12;
 
