--- a/frontend/src/index.less
+++ b/frontend/src/index.less
@@ -89,3 +89,12 @@ button {
     cursor: pointer;
   }
 }
+
+a {
+  text-decoration: none;
+  color: white;
+
+  &:hover {
+    opacity: 0.6;
+  }
+}
